P2Pmsgcore/native/P2Pmsgcore_c.h

typedef void* P2PeerMsgHandle;
P2PC_API const wchar_t*   p2peermsg_c_name         (P2PeerMsgHandle h);
P2PC_API const char*      p2peermsg_data           (P2PeerMsgHandle h);
P2PC_API int64_t          p2peermsg_data_size      (P2PeerMsgHandle h);
P2PC_API unsigned char    p2peermsg_priority       (P2PeerMsgHandle h);
P2PC_API unsigned char    p2peermsg_set_priority   (P2PeerMsgHandle h, unsigned char pri);
P2PC_API unsigned short   p2peermsg_sizeof         (P2PeerMsgHandle h);
P2PC_API int              p2peermsg_is_wrapped     (P2PeerMsgHandle h);