P2Pmsgcore/java/src/main/java/com/p2pmsgcore/native_/P2Pmsgcore_c.java


    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const wchar_t *p2peermsg_c_name(P2PeerMsgHandle h)
     * }
     */
    public static FunctionDescriptor p2peermsg_c_name$descriptor() {
        return p2peermsg_c_name.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const wchar_t *p2peermsg_c_name(P2PeerMsgHandle h)
     * }
     */
    public static MethodHandle p2peermsg_c_name$handle() {
        return p2peermsg_c_name.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const wchar_t *p2peermsg_c_name(P2PeerMsgHandle h)
     * }
     */
    public static MemorySegment p2peermsg_c_name$address() {
        return p2peermsg_c_name.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const wchar_t *p2peermsg_c_name(P2PeerMsgHandle h)
     * }
     */
    public static MemorySegment p2peermsg_c_name(MemorySegment h) {
        var mh$ = p2peermsg_c_name.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peermsg_c_name", h);
            }
            return (MemorySegment)mh$.invokeExact(h);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peermsg_data {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peermsg_data").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const char *p2peermsg_data(P2PeerMsgHandle h)
     * }
     */
    public static FunctionDescriptor p2peermsg_data$descriptor() {
        return p2peermsg_data.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const char *p2peermsg_data(P2PeerMsgHandle h)
     * }
     */
    public static MethodHandle p2peermsg_data$handle() {
        return p2peermsg_data.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const char *p2peermsg_data(P2PeerMsgHandle h)
     * }
     */
    public static MemorySegment p2peermsg_data$address() {
        return p2peermsg_data.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const char *p2peermsg_data(P2PeerMsgHandle h)
     * }
     */
    public static MemorySegment p2peermsg_data(MemorySegment h) {
        var mh$ = p2peermsg_data.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peermsg_data", h);
            }
            return (MemorySegment)mh$.invokeExact(h);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peermsg_data_size {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_LONG_LONG,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peermsg_data_size").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int64_t p2peermsg_data_size(P2PeerMsgHandle h)
     * }
     */
    public static FunctionDescriptor p2peermsg_data_size$descriptor() {
        return p2peermsg_data_size.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int64_t p2peermsg_data_size(P2PeerMsgHandle h)
     * }
     */
    public static MethodHandle p2peermsg_data_size$handle() {
        return p2peermsg_data_size.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int64_t p2peermsg_data_size(P2PeerMsgHandle h)
     * }
     */
    public static MemorySegment p2peermsg_data_size$address() {
        return p2peermsg_data_size.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int64_t p2peermsg_data_size(P2PeerMsgHandle h)
     * }
     */
    public static long p2peermsg_data_size(MemorySegment h) {
        var mh$ = p2peermsg_data_size.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peermsg_data_size", h);
            }
            return (long)mh$.invokeExact(h);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peermsg_priority {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_CHAR,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peermsg_priority").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char p2peermsg_priority(P2PeerMsgHandle h)
     * }
     */
    public static FunctionDescriptor p2peermsg_priority$descriptor() {
        return p2peermsg_priority.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char p2peermsg_priority(P2PeerMsgHandle h)
     * }
     */
    public static MethodHandle p2peermsg_priority$handle() {
        return p2peermsg_priority.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char p2peermsg_priority(P2PeerMsgHandle h)
     * }
     */
    public static MemorySegment p2peermsg_priority$address() {
        return p2peermsg_priority.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char p2peermsg_priority(P2PeerMsgHandle h)
     * }
     */
    public static byte p2peermsg_priority(MemorySegment h) {
        var mh$ = p2peermsg_priority.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peermsg_priority", h);
            }
            return (byte)mh$.invokeExact(h);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peermsg_set_priority {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_CHAR,
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_CHAR
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peermsg_set_priority").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char p2peermsg_set_priority(P2PeerMsgHandle h, unsigned char pri)
     * }
     */
    public static FunctionDescriptor p2peermsg_set_priority$descriptor() {
        return p2peermsg_set_priority.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char p2peermsg_set_priority(P2PeerMsgHandle h, unsigned char pri)
     * }
     */
    public static MethodHandle p2peermsg_set_priority$handle() {
        return p2peermsg_set_priority.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char p2peermsg_set_priority(P2PeerMsgHandle h, unsigned char pri)
     * }
     */
    public static MemorySegment p2peermsg_set_priority$address() {
        return p2peermsg_set_priority.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char p2peermsg_set_priority(P2PeerMsgHandle h, unsigned char pri)
     * }
     */
    public static byte p2peermsg_set_priority(MemorySegment h, byte pri) {
        var mh$ = p2peermsg_set_priority.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peermsg_set_priority", h, pri);
            }
            return (byte)mh$.invokeExact(h, pri);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peermsg_sizeof {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_SHORT,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peermsg_sizeof").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned short p2peermsg_sizeof(P2PeerMsgHandle h)
     * }
     */
    public static FunctionDescriptor p2peermsg_sizeof$descriptor() {
        return p2peermsg_sizeof.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned short p2peermsg_sizeof(P2PeerMsgHandle h)
     * }
     */
    public static MethodHandle p2peermsg_sizeof$handle() {
        return p2peermsg_sizeof.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned short p2peermsg_sizeof(P2PeerMsgHandle h)
     * }
     */
    public static MemorySegment p2peermsg_sizeof$address() {
        return p2peermsg_sizeof.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned short p2peermsg_sizeof(P2PeerMsgHandle h)
     * }
     */
    public static short p2peermsg_sizeof(MemorySegment h) {
        var mh$ = p2peermsg_sizeof.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peermsg_sizeof", h);
            }
            return (short)mh$.invokeExact(h);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peermsg_is_wrapped {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_INT,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peermsg_is_wrapped").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int p2peermsg_is_wrapped(P2PeerMsgHandle h)
     * }
     */
    public static FunctionDescriptor p2peermsg_is_wrapped$descriptor() {
        return p2peermsg_is_wrapped.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int p2peermsg_is_wrapped(P2PeerMsgHandle h)
     * }
     */
    public static MethodHandle p2peermsg_is_wrapped$handle() {
        return p2peermsg_is_wrapped.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int p2peermsg_is_wrapped(P2PeerMsgHandle h)
     * }
     */
    public static MemorySegment p2peermsg_is_wrapped$address() {
        return p2peermsg_is_wrapped.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int p2peermsg_is_wrapped(P2PeerMsgHandle h)
     * }
     */
    public static int p2peermsg_is_wrapped(MemorySegment h) {
        var mh$ = p2peermsg_is_wrapped.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peermsg_is_wrapped", h);
            }
            return (int)mh$.invokeExact(h);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
